<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Qustion_dong.Breed_q4">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pen_location_1"
                android:textSize="16dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:textSize="12dp"
                android:inputType="number"
                android:hint="@string/pen_location_hint"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/water_tank_time_pen_1"
                android:textSize="16dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"
                android:text="@string/pen_total_cow"
               />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:hint="@string/pen_total_cow_hint"
                android:inputType="number"
                android:textSize="12dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"
                android:text="@string/wating_drink_cow"
                android:layout_marginTop="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:hint="@string/wating_drink_cow_hint"
                android:inputType="number"
                android:textSize="12dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"
                android:text="@string/drinking_water_time"
                android:layout_marginTop="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:hint="@string/drinking_water_time_hint"
                android:inputType="number"
                android:textSize="12dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wating_ratio_cow"
                android:textSize="16dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"
                android:text="비율 들어갈 곳"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/water_tank_time"
                android:textSize="16dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"
                android:text="@string/water_tank_time"
                />

            <View

                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGray"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>